tests/specs/run/bytes_and_text_imports/missing_unstable/dynamic.out
error: Uncaught (in promise) TypeError: "bytes" is not a valid module type.
    type: typeBytes,
          ^
    at file:///[WILDLINE]/dynamic.ts:8:11
